# SimplyTaint

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile.rules
cmake/: IntelPIN.cmake
example/: overflow.cpp
src/: ctl_flow.cpp  ctl_flow.h  global.cpp  global.h  image.cpp  image.h  instruction.cpp  instruction.h  memory_operation.cpp  memory_operation.h  read_syscall.cpp  read_syscall.h  register_operation.cpp  register_operation.h
